--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-component-benchmark",
   "version": "1.0.0",
+  "private": true,
   "description": "Working example of how to use `react-component-benchmark`",
   "keywords": [
     "benchmarks",
@@ -9,19 +10,25 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "react": "17.0.1",
-    "react-component-benchmark": "0.0.0-hooks.alpha.10",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.0"
+    "next": "^13",
+    "react": "^18",
+    "react-component-benchmark": "^1",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "4.1.3"
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0",
+    "prettier": "^2.7.1",
+    "typescript": "4.8.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "browserslist": [
     ">0.2%",
